# datavisfinal

./: .gitattributes  .gitignore  README.md  Thang.sln
Assets/: DensityTex.asset
Assets/DensityRend/Demo/: Spinning.cs
Assets/DensityRend/Editor/: CloudParticleScriptEditor.cs  GenerateNoise.cs
Assets/DensityRend/Materials/: Body.mat  Body__HorseManBodyT.mat  Butt.mat  Butt__HorseManBodyT.mat  CloudBall.shader  Dick.mat  Dick__HorseManBodyT.mat  Explosion.mat  ExplosionBase.shader  Eye.mat  EyeTransperent.mat  HorseManBodyT.mat  Mouth.mat  Nail.mat  Nail__HorseManBodyT.mat
Assets/DensityRend/Resources/: BackupClouds.shader  CloudLayer.shader  CloudMat.mat  DensityBlit.shader  DensityMat.mat  DensityRenderer.shader  DodgeIf.cginc  FractionalPow.compute  GenerateNoise.compute  Movement.cs  Simple IK no head.controller  [CameraRig].prefab
Assets/DensityRend/Scenes/: DemoLightSettings.lighting  DemoScene.unity
Assets/DensityRend/Scripts/: CameraClouds.cs  CameraDensityRend.cs  CloudRenderer.cs  LightChanger.cs  (+3 more)
ProjectSettings/: AudioManager.asset  ClusterInputManager.asset  DynamicsManager.asset  EditorBuildSettings.asset  EditorSettings.asset  GraphicsSettings.asset  InputManager.asset  NavMeshAreas.asset  NetworkManager.asset  Physics2DSettings.asset  PresetManager.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset  TimeManager.asset  UnityConnectSettings.asset  VFXManager.asset
UserSettings/: EditorUserSettings.asset
UserSettings/Layouts/: CurrentMaximizeLayout.dwlt  default-2021.dwlt
VtkConverter/: CMakeLists.txt  VTKConverter.cxx
(+24 files in other folders)
